# LogicMem-mcp-

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: A2A-PROTOCOL.md  CONTRACT-TESTS.md  DECRYPTION-FAILURE-ANALYSIS.md  EMBEDDING-FALLBACK.md  EXAMPLES.md  MCP-PROTOCOL.md  MONITORING.md  QUICKSTART.md  SECURITY.md
monitoring/: synthetic_monitor.py
src/logicmem/: __init__.py  a2a.py  audit.py  client.py  exceptions.py  memory.py  reasoning.py  server.py
src/logicmem/cli/: __init__.py
tests/: contract_tests.py
webhooks/: dispatcher.py
